Refactor: remove all blocking calls — full reactive chain across services and platform layers
- WhatsAppSenderService: return Mono<T> instead of blocking, callers use .subscribe()
- All core services (BillService, HotKolekService, SavingsService, CreditHistoryService,
  CustomerHistoryService, KolekTasService, SimulasiService, UserService): remove .block()
  from public methods, return Mono<T>/Flux<T>/Mono<Void>
- AuthorizedChats.getUserRoles: return Mono<AccountOfficerRoles>
- parseCsv* methods: replace ExecutorService+Semaphore with reactive pipeline
  (deleteAll → Flux.create → buffer(500) → flatMap(save, nCPU) → retryWhen(backoff 3x) → GC)
- HandleKolekCommand: replace CompletableFuture chain with Mono.zip + subscribeOn(boundedElastic)
- All Telegram handlers: add .block() at call site (runs on virtual threads — safe)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>